# Movie-ChatBot

./: .env  .gitignore  README.md  TMDB.py  agenttest.py  app.py  main.py  notes.md  pyproject.toml  randomizer.py  recommendations.txt  requirements.txt  similar.txt  temp.txt  test.py  test_tools.py  tools.py
requirements/: cpu.txt  cuda.txt
tests/: test_agent.py  test_tmdbservice.py
